--- a/src/WhereGroup/MetadorBundle/Resources/views/Dataset/dataset.xml.twig
+++ b/src/WhereGroup/MetadorBundle/Resources/views/Dataset/dataset.xml.twig
@@ -3,7 +3,7 @@
    xmlns:gmd="http://www.isotc211.org/2005/gmd"
    xmlns:gco="http://www.isotc211.org/2005/gco"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-   xmlns:gml="http://www.opengis.net/gml"
+   xmlns:gml="http://www.opengis.net/gml/3.2"
    xmlns:xlink="http://www.w3.org/1999/xlink"
    xsi:schemaLocation="http://www.isotc211.org/2005/gmd http://standards.iso.org/ittf/PubliclyAvailableStandards/ISO_19139_Schemas/gmd/gmd.xsd">
 
