--- a/src/WhereGroup/MetadorBundle/Resources/views/Dataset/dataset.xml.twig
+++ b/src/WhereGroup/MetadorBundle/Resources/views/Dataset/dataset.xml.twig
@@ -129,6 +129,24 @@
      <gco:CharacterString>{{ p['metadataStandardVersion'] }}</gco:CharacterString>
    </gmd:metadataStandardVersion>
 
+   {# <gmd:referenceSystemInfo> #}
+   {#     <gmd:MD_ReferenceSystem> #}
+   {#         <gmd:referenceSystemIdentifier> #}
+   {#             <gmd:RS_Identifier> #}
+   {#                 <gmd:code> #}
+   {#                     <gco:CharacterString>http://www.opengis.net/def/crs/EPSG/0/3044</gco:CharacterString> #}
+   {#                 </gmd:code> #}
+   {#                 <gmd:codeSpace> #}
+   {#                     <gco:CharacterString>urn:ogc:def:crs:EPSG</gco:CharacterString> #}
+   {#                 </gmd:codeSpace> #}
+   {#                 <gmd:version> #}
+   {#                     <gco:CharacterString>6.11.2</gco:CharacterString> #}
+   {#                 </gmd:version> #}
+   {#             </gmd:RS_Identifier> #}
+   {#         </gmd:referenceSystemIdentifier> #}
+   {#     </gmd:MD_ReferenceSystem> #}
+   {# </gmd:referenceSystemInfo>	 #}
+
    <gmd:identificationInfo>
      <gmd:MD_DataIdentification>
        <gmd:citation>
